--- a/asset/student/student.html
+++ b/asset/student/student.html
@@ -4,13 +4,10 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Student</title>
 </head>
 <body>
     <h1>Tes</h1>
-    <p>Hello</p>
-    <div class="container">
-        <a href="asset/student/student.html"></a>
-    </div>
+    <p>Hello Student</p>
 </body>
 </html>
