--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <h1>Tes</h1>
     <p>Hello</p>
     <div class="container">
-        <a href="asset/student/student.html"></a>
+        <a href="asset/student/student.html">student</a>
     </div>
 </body>
 </html>
